# GenericAggregator

./: Cargo.toml  data.zlib  random_samples.json  script.py  transformed_random_samples.json
src/: aggregation.rs  data_reader.rs  main.rs  scheduler.rs
src/outputs/: agg_greg_cmpg_adszId_20240731230928.csv  agg_pid_cmpg_rank_20240731230528.csv
src/resources/: aggregator_config.json  server_config.json
src/resources/sample_configs/: config.json  config_sample_1.json  config_sample_2.json
