[package]
name = "hackathon2024"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = {version = "2.0.0", features = ["serde"]}
csv = "1.1"
cron = "0.11"
chrono = "0.4"
tokio = {version = "1", features = ["full"]}
log = "0.4"
env_logger = "0.9"
axum = "0.5"
flate2 = "1.0"
crossbeam = "0.8"
jsonschema = "0.18.0"